# startin

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  changelog.md  samples2.xyz  samples4.xyz
.github/workflows/: rust.yml
data/: samples.xyz  samples2.xyz  samples3.xyz
examples/: attributes.rs  example1.rs  example10.rs  example11.rs  example12.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  example9.rs  geotiff2tin.rs  interpol.rs  laz2tin.rs  main.rs  nni.rs  normals.rs  readme_snippet.rs
src/: c_interface.rs  geom.rs  lib.rs  main.rs  pred.rs  predicates.c  predicates.rs
src/geom/: exactpred.rs  mod.rs  pred.rs
src/interpolation/: mod.rs
tests/: deletion.rs  duplicates.rs  init_construction.rs  interpolate.rs
