
[package]
name = "startin"
version = "0.5.4"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
edition = "2021"
license = "MIT"
description = "A Delaunay triangulator for terrains."
repository = "https://github.com/hugoledoux/startin"
keywords = ["delaunay", "triangulation", "terrain", "gis"]
readme = "README.md"

[dependencies]
rand = "0.6"
robust = "0.2"
geojson= "0.23"
serde_json= "1.0"

[dev-dependencies]
csv = "1"
serde = "1.0"
serde_derive = "1.0"
las = { version = "0.7", features = ["laz"] }
gdal = "0.12.0"

[features]
c_api = []

[lib]
name = "startin"
crate-type = ["lib", "cdylib"]
