
[package]
name = "startin"
version = "0.7.0"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
edition = "2021"
license = "MIT"
description = "A Delaunay triangulator for terrains."
repository = "https://github.com/hugoledoux/startin"
keywords = ["delaunay", "triangulation", "terrain", "gis"]
readme = "README.md"

[dependencies]
rand = "0.6"
robust = "1.1"
kdbush = "0.2.0"

[dev-dependencies]
csv = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
geojson = "0.24"
las = { version = "0.8", features = ["laz"] }
gdal = { version = "0.15" }
 # gdal = { version = "0.12.0", features = ["bindgen"] }
assert_approx_eq = "1.1.0"

[features]
c_api = []

[lib]
name = "startin"
crate-type = ["lib", "cdylib"]
